--- a/index.html
+++ b/index.html
@@ -1,37 +1,96 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="styleCV.css" rel="stylesheet"/>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/script.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>
+    <link href="styleCV.css" rel="stylesheet" />
     <title>CV SCHIARATURA Ludovic</title>
-</head>
-<body class="bg-dark">
+  </head>
+  <body class="bg-dark text-light">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="/img/pinguin.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                    X_CYL
-                  </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">Features</a>
-                  <a class="nav-link" href="#">Pricing</a>
-                  <a class="nav-link disabled">Disabled</a>
-                </div>
-              </div>
+      <nav
+        class="position-fixed navbar navbar-expand-lg navbar-dark bg-transparent"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img
+              src="/img/pinguin.png"
+              alt="Logo"
+              width="30"
+              height="24"
+              class="d-inline-block align-text-top"
+            />
+            X_CYL
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link disabled">Disabled</a>
             </div>
-          </nav>
+          </div>
+        </div>
+      </nav>
     </header>
-    
-</body>
+    <main class="container-fluid">
+      <div class="row row-cols-1" id="firstRowHomePage">
+        <div
+          class="d-flex justify-content-center text-center flex-column"
+          id="text-presentation"
+        >
+          <h3 class="fs-4">Bienvenue !</h3>
+          <div class="big-text">Je suis agent de maîtrise</div>
+          <p class="description">
+            Je m'appele Ludovic, et actuellement, je gère du matériel au sein du
+            service logistique d'une entreprise de bâtiment. Venez me découvir
+            en détail ci-dessous...
+          </p>
+          <div class="btn-container">
+            <button class="btn btn-outline-info">Télécharger mon CV</button>
+          </div>
+          <div class="" id="mouseBtn">
+            <a href="#about"><i class="bi bi-mouse-fill"></i></a>
+          </div>  
+        </div>
+      </div>
+      <div class="container">
+        <div class="row row-cols-2 align-items-center" id="about">
+          <div>
+            <img class="img-thumbnail" src="/img/man.jpeg" width="400px" height="300px" style="max-width: 100%;"/>
+          </div>
+          <div>
+            <h3>Qui suis-je ?</h3>
+            <p>Bonjour,je suis  <span class="text-danger" >Ludovic SCHIARATURA</span></p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt in pariatur expedita dolores sequi quidem voluptas totam, maxime sed veritatis voluptatibus quasi illum officia suscipit temporibus! Eligendi impedit accusantium reiciendis.
+            </br>
+            </br>
+            </br>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti placeat quas adipisci doloremque! Fuga, pariatur. Quibusdam error esse aspernatur assumenda nam cumque? Odio provident, asperiores expedita minima facere deleniti minus.
+            </p>
+          </div>
+        </div>
+      </div>
+      
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
