--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         >
           <h3 class="fs-4">Bienvenue !</h3>
           <div class="big-text">Je suis agent de maîtrise</div>
-          <p class="description">
-            Je m'appele Ludovic, et actuellement, je gère du matériel au sein du
+          <p class="description fs-5">
+            Actuellement, je gère du matériel au sein du
             service logistique d'une entreprise de bâtiment. Venez me découvir
             en détail ci-dessous...
           </p>
@@ -74,22 +74,21 @@
       <div class="container">
         <div class="row row-cols-2 align-items-center" id="about">
           <div>
-            <img class="img-thumbnail" src="/img/man.jpeg" width="400px" height="300px" style="max-width: 100%;"/>
+            <img class="img-thumbnail" src="/img/ludo.jpg" width="400px" style="max-width: 100%;"/>
           </div>
           <div>
-            <h3>Qui suis-je ?</h3>
-            <p>Bonjour,je suis  <span class="text-danger" >Ludovic SCHIARATURA</span></p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt in pariatur expedita dolores sequi quidem voluptas totam, maxime sed veritatis voluptatibus quasi illum officia suscipit temporibus! Eligendi impedit accusantium reiciendis.
+            <h3 class="text-center">Qui suis-je ?</h3>
+            <p class="fs-5">Bonjour, je m'appele  <span class="text-danger fs-2" >Ludovic SCHIARATURA</span>,</p>
+            <p class="fs-5">
+              Curieux, passionné, j'aime apprendre et relever de nouveaux défis, tant personnels que professionnels</br>
+              Animé par la rigueur et la réflexion, je suis allé au bout de mes projets et de ceux que l’on m’a confié en créant des indicateurs de contrôle et de pilotage.
+              Doué d’une grande faculté d’adaptation et à l’écoute des mes collaborateurs, j' aime évoluer, me remettre en question parfois dans des domaines innatendus.
             </br>
-            </br>
-            </br>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti placeat quas adipisci doloremque! Fuga, pariatur. Quibusdam error esse aspernatur assumenda nam cumque? Odio provident, asperiores expedita minima facere deleniti minus.
+              J'aime ainsi découvrir de nouveaux métiers et une nouvelle approche de travail, tout en faisant partager le fruit de mon expérience dans les domaines les plus variés.
             </p>
           </div>
         </div>
       </div>
-      
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
