--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>
     <link href="styleCV.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
     <title>CV SCHIARATURA Ludovic</title>
   </head>
   <body class="bg-dark text-light">
     <header>
       <nav
-        class="position-fixed navbar navbar-expand-lg navbar-dark bg-transparent"
+        class="position-fixed navbar navbar-expand-lg navbar-dark"
       >
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -41,10 +43,10 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Pricing</a>
-              <a class="nav-link disabled">Disabled</a>
+              <a class="nav-link fs-3 active" aria-current="page"  href="#">Home</a>
+              <a class="nav-link fs-3" href="/experience.html">Expériences</a>
+              <a class="nav-link fs-3" href="#">Formations</a>
+              <a class="nav-link fs-3" href="#">Loisirs</a>
             </div>
           </div>
         </div>
@@ -56,9 +58,9 @@
           class="d-flex justify-content-center text-center flex-column"
           id="text-presentation"
         >
-          <h3 class="fs-4">Bienvenue !</h3>
-          <div class="big-text">Je suis agent de maîtrise</div>
-          <p class="description fs-5">
+          <h3 class="fs-3">Bienvenue !</h3>
+          <div class="big-text">Je suis agent logistique et maintenance préventive</div>
+          <p class="description fs-4">
             Actuellement, je gère du matériel au sein du
             service logistique d'une entreprise de bâtiment. Venez me découvir
             en détail ci-dessous...
@@ -71,18 +73,19 @@
           </div>  
         </div>
       </div>
-      <div class="container">
-        <div class="row row-cols-2 align-items-center" id="about">
-          <div>
-            <img class="img-thumbnail" src="/img/ludo.jpg" width="400px" style="max-width: 100%;"/>
+      <div>
+        <div class="row align-items-center justify-content-center" id="about">
+          <div class="col col-4"> 
+            <img class="img-thumbnail" src="/img/ludo.jpg" width="350px" style="max-width: 100%;"/>
           </div>
-          <div>
+          <div class="col col-4">
             <h3 class="text-center">Qui suis-je ?</h3>
-            <p class="fs-5">Bonjour, je m'appele  <span class="text-danger fs-2" >Ludovic SCHIARATURA</span>,</p>
-            <p class="fs-5">
+            <p class="fs-4">Bonjour, je m'appele  </br><span class="text-danger fs-2" >Ludovic SCHIARATURA</span></p>
+            <p class="fs-4">
               Curieux, passionné, j'aime apprendre et relever de nouveaux défis, tant personnels que professionnels</br>
               Animé par la rigueur et la réflexion, je suis allé au bout de mes projets et de ceux que l’on m’a confié en créant des indicateurs de contrôle et de pilotage.
-              Doué d’une grande faculté d’adaptation et à l’écoute des mes collaborateurs, j' aime évoluer, me remettre en question parfois dans des domaines innatendus.
+              Le savoir être et une bonne élocution me caractérisent, je suis à l’écoute de mes interlocuteurs, et sait faire preuve d’une grande capacité d’intégration à une nouvelle équipe lorsque la situation le nécessite. Le pragmatisme, la bonne humeur et la maîtrise de soi sont la clé pour moi d’une bonne gestion en toutes circonstances
+
             </br>
               J'aime ainsi découvrir de nouveaux métiers et une nouvelle approche de travail, tout en faisant partager le fruit de mon expérience dans les domaines les plus variés.
             </p>
@@ -90,6 +93,13 @@
         </div>
       </div>
     </main>
+    <footer class="container-fluid bg-dark border border-info footer-row">
+      <div class="row row-cols-1 d-flex justify-content-center text-info ">
+          <div class="text-center">
+              <h6><b>Build by myself</b></h6>
+          </div>
+      </div>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
