working experience page

--- a/experience.html
+++ b/experience.html
@@ -59,46 +59,58 @@
           id="text-presentation">
           <div class="cols col-6 text-experience">
             <h3 class="experiences fs-1 text-center"><u>Mes experiences</u></h3>
-            <div class="accordion" id="accordionExample">
+            <div class="accordion accordion-flush border" id="accordionFlushExample">
               <div class="accordion-item border border-info">
                 <h2 class="accordion-header">
-                  <button class="accordion-button bg-dark text-danger" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    RABOT DUTILLEUL CONSTRUCTION
+                  <button class="accordion-button bg-dark text-danger collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    <b>RABOT DUTILLEUL CONSTRUCTION</b>
                   </button>
                 </h2>
-                <div id="collapseOne" class="accordion-collapse collapse-show" data-bs-parent="#accordionExample">
-                  <div class="accordion-body bg-dark text-light">
-                    <h5 class="text-center">Janvier 2006 à ce jour</h5>
-                    <p>Gestion du parc de matériel topographique, Parc de machines electroportatives (2200 machines), photocopieurs, Suivi des GMAO et des contrôles périodiques des matériels concernés et des installations électriques provisoires</p>
-                    </br><h5 class="text-center">Decembre 1991 à décembre 2005</h5>
-                    <p>Maintenance et dépannage de grues à tour, installations provisoires de chantier, montage de bases vies, câblage de coffrets électriques</p>
-                  </div>
+                <div id="flush-collapseOne" class="accordion-collapse collapse-show" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body bg-dark text-light"><strong>Placeholder content for this accordion</strong>, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
                 </div>
               </div>
-              <div class="accordion-item border-info">
+              <div class="accordion-item border border-info">
                 <h2 class="accordion-header">
-                  <button class="accordion-button bg-dark text-danger collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    TRANSMANCHE LINK
+                  <button class="accordion-button bg-dark text-danger collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    <b>TRANSMANCHE-LINK</b>
                   </button>
                 </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                  <div class="accordion-body bg-dark text-light">
-                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code><i>.accordion-body</i></code>, though the transition does limit overflow.
-                  </div>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body bg-dark text-light">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
                 </div>
               </div>
-              <div class="accordion-item border-info">
+              <div class="accordion-item border border-info">
                 <h2 class="accordion-header">
-                  <button class="accordion-button bg-dark text-danger collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    BOUYGUES CONSTRUCTION
+                  <button class="accordion-button bg-dark text-danger collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    <b>BOUYGUES CONSTRUCTION</b>
                   </button>
                 </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-                  <div class="accordion-body bg-dark text-light">
-                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                  </div>
-                </div>  
+                <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body bg-dark text-light">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                </div>
               </div>
+              <div class="accordion-item border border-info">
+                <h2 class="accordion-header">
+                  <button class="accordion-button bg-dark text-danger collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                    <b>SERVICE MILITAIRE</b>
+                  </button>
+                </h2>
+                <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body bg-dark text-light">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                </div>
+              </div>
+              <div class="accordion-item border border-info">
+                <h2 class="accordion-header">
+                  <button class="accordion-button bg-dark text-danger collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                    <b>ARTOIS BETON</b>
+                  </button>
+                </h2>
+                <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body bg-dark text-light">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                </div>
+              </div>
+            </div>
             </div>
         </div>
       </div>
