--- a/experience.html
+++ b/experience.html
@@ -8,10 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
       rel="stylesheet"/>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>
-    <link href="styleCV.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;600&display=swap" rel="stylesheet">
+    <link href="styleCV.css" rel="stylesheet" />
     <title>CV SCHIARATURA Ludovic</title>
   </head>
   <body class="bg-dark text-light">
@@ -59,10 +59,10 @@
           id="text-presentation">
           <div class="cols col-6 text-experience">
             <h3 class="experiences fs-1 text-center"><u>Mes experiences</u></h3>
-            <div class="accordion accordion-flush border" id="accordionFlushExample">
+            <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item border border-info">
                 <h2 class="accordion-header">
-                  <button class="accordion-button bg-dark text-danger collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  <button style="display: block; text-align: center;" class="accordion-button bg-dark text-danger collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                     <b>RABOT DUTILLEUL CONSTRUCTION</b>
                   </button>
                 </h2>
@@ -77,7 +77,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body bg-dark text-light">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                  <div class="accordion-body bg-dark text-light"><strong>Placeholder content for this accordion</strong>, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
                 </div>
               </div>
               <div class="accordion-item border border-info">
@@ -87,7 +87,8 @@
                   </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body bg-dark text-light">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                  <div class="accordion-body bg-dark text-light"><h4 class="text-center">Avril 1987 - Novembre 1991</br>Lille et La Rochelle</h4></br>
+                  <p>Electromécanicien de poste au métro le Lille Ligne 1, Maintenance et dépannage installations électriques provisoires de chantier, Soudure, Oxycoupage. A partir de Juin 1991 départ sur La Rochelle comme électromécanicien de maintenance sur lanceur de voussoirs et centrales à béton.</p></div>
                 </div>
               </div>
               <div class="accordion-item border border-info">
@@ -97,7 +98,8 @@
                   </button>
                 </h2>
                 <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body bg-dark text-light">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                  <div class="accordion-body bg-dark text-light"><h4 class="text-center">Février 1985 - Janvier 1986</br>St Wendel (DE)</h4></br>
+                  <p>Electromécanicen sur tourelles de char AMX-30, Maintenance, réparations, essais de mise à feu, etanchéité à l'immertion, démontage et remontage des optiques de tir en vue de contrôles périodiques. Passage de mon permis poids-lourd.</p></div>
                 </div>
               </div>
               <div class="accordion-item border border-info">
@@ -107,7 +109,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body bg-dark text-light">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                  <div class="accordion-body bg-dark text-light"><h4 class="text-center">Juillet 1983 - Janvier 1985</br>Arras</h4></br> <p>Mécanicien poids lourds, assistance au montage de centrales à béton</p></div>
                 </div>
               </div>
             </div>
