--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
       rel="stylesheet"/>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>
-    <link href="styleCV.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;600&display=swap" rel="stylesheet">
+    <link href="styleCV.css" rel="stylesheet" />
     <title>CV SCHIARATURA Ludovic</title>
   </head>
   <body class="bg-dark text-light">
@@ -45,7 +45,7 @@
             <div class="navbar-nav">
               <a class="nav-link fs-3 active" aria-current="page"  href="#">Home</a>
               <a class="nav-link fs-3" href="/experience.html">Expériences</a>
-              <a class="nav-link fs-3" href="#">Formations</a>
+              <a class="nav-link fs-3" href="/competences.html">Competences</a>
               <a class="nav-link fs-3" href="#">Loisirs</a>
             </div>
           </div>
