finished to build the experiences page, add more logos in img folder

--- a/competences.html
+++ b/competences.html
@@ -44,8 +44,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link fs-3" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link fs-3" href="/experience.html">experiences</a>
-              <a class="nav-link fs-3" href="#">Pricing</a>
+              <a class="nav-link fs-3" href="/experience.html">Experiences</a>
+              <a class="nav-link fs-3" href="/competences.html">Competences</a>
               <a class="nav-link fs-3">Disabled</a>
             </div>
           </div>
@@ -55,13 +55,138 @@
     <main class="container-fluid">
       <div class="row row-cols-1" id="firstRowHomePage">
         <div
-          class="d-flex justify-content-center"
-          id="text-presentation">
-          <div class="cols col-6 text-experience">
+          class="d-flex justify-content-center" id="text-presentation">
+          <div class="cols col-10 text-experience">
             <h3 class="experiences fs-1 text-center"><u>Mes competences</u></h3>
+            <div class="container">
+                <div class="d-flex justify-content-center">
+                    <div class="row">
+                        <div class=" col p-2 ">
+                            <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
+                                <img src="/img/welding.png" class="card-img-top size-img-card" alt="microsoft office logo">
+                                <div class="card-body text-center">
+                                  <p class="card-text">Soudure à l'arc, apprentissage sur site avec des anciens "sachants" qui ont étés mes tuteurs.</p>
+                                </div>
+                                <div class="card-footer text-body-light mt-4">
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col p-2">
+                            <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
+                                <img src="/img/automatisation.png" class="card-img-top size-img-card" alt="...">
+                                <div class="card-body text-center">
+                                  <p class="card-text">Automatismes, mise en place et parametrage d'automates d' assistance à la conduite de grues à tour, de centrales à béton</p>
+                                </div>
+                                <div class="card-footer text-body-light">
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col p-2 ">
+                            <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
+                                <img src="/img/sauveteur.gif" class="card-img-top size-img-card" alt="...">
+                                <div class="card-body text-center">
+                                  <p class="card-text">Sauveteur secouriste du travail depuis 20 ans, recyclages tous les 2 ans, formé à l'utilisation du défibrilateur</p>
+                                </div>
+                                <div class="card-footer text-body-light mt-4">
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-half text-info"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col p-2">
+                            <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
+                                <img src="/img/GIMP-logo.png" class="card-img-top size-img-card" alt="...">
+                                <div class="card-body text-center">
+                                  <p class="card-text">Retouche photo, équivalent libre de Photoshop, bonne connaissance du soft pour usage courant et plus pointu.</p>
+                                </div>
+                                <div class="card-footer text-body-light mt-4">
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col p-2">
+                            <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
+                                <img src="/img/Libre-Office.webp" class="card-img-top size-img-card" alt="...">
+                                <div class="card-body text-center">
+                                  <p class="card-text">Utilisation régulière en privé du pack open source "libre office", bonne alternative au pack MS.</p>
+                                </div>
+                                <div class="card-footer text-body-light mt-4">
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col p-2">
+                            <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
+                                <img src="/img/mcs.png" class="card-img-top size-img-card" alt="...">
+                                <div class="card-body text-center">
+                                  <p class="card-text">Logiciel pro de gestion de location/vente de matériel, facturation, rapports d'activité, etc..., référent logiciel dans l'entreprise</p>
+                                </div>
+                                <div class="card-footer text-body-light">
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col p-2">
+                            <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
+                                <img src="/img/msOffice.png" class="card-img-top size-img-card" alt="...">
+                                <div class="card-body text-center">
+                                  <p class="card-text">Bonnes connaissances du pack office Microsoft, excel, word, teams, etc... en utilisation profeéssionnelle.</p>
+                                </div>
+                                <div class="card-footer text-body-light mt-4">
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-half text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col p-2">
+                            <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
+                                <img src="/img/ubuntu-studio-logo.png" class="card-img-top size-img-card" alt="...">
+                                <div class="card-body text-center">
+                                  <p class="card-text">Ubuntu studio, logiciel de montage musical, enregistrements, création, arrangements, filtrage</p>
+                                </div>
+                                <div class="card-footer text-body-light mt-4">
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+              </div>
           </div>
-        </div>
-      </div>
+        </div> 
     </main>
         <footer class="container-fluid bg-dark border border-info footer-row">
             <div class="row row-cols-1 d-flex justify-content-center text-info">
