--- a/experience.html
+++ b/experience.html
@@ -44,8 +44,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link fs-3" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link fs-3" href="/experience.html">experiences</a>
-              <a class="nav-link fs-3" href="#">Pricing</a>
+              <a class="nav-link fs-3" href="/experience.html">Experiences</a>
+              <a class="nav-link fs-3" href="/competences.html">Competences</a>
               <a class="nav-link fs-3">Disabled</a>
             </div>
           </div>
