--- a/competences.html
+++ b/competences.html
@@ -44,9 +44,9 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link fs-3" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link fs-3" href="/experience.html">Experiences</a>
-              <a class="nav-link fs-3" href="/competences.html">Competences</a>
-              <a class="nav-link fs-3">Disabled</a>
+              <a class="nav-link fs-3" href="/experience.html">Expériences</a>
+              <a class="nav-link fs-3" href="/competences.html">Compétences</a>
+              <a class="nav-link fs-3" href="/extras.html">Extras</a>
             </div>
           </div>
         </div>
@@ -181,20 +181,12 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    
-                </div>
+                    </div> 
+                </div> 
               </div>
-          </div>
+          </div> 
         </div> 
     </main>
-        <footer class="container-fluid bg-dark border border-info footer-row">
-            <div class="row row-cols-1 d-flex justify-content-center text-info">
-                <div class="text-center">
-                    <h6><b>Build by myself</b></h6>
-                </div>
-            </div>
-        </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html> 
