--- a/experience.html
+++ b/experience.html
@@ -46,7 +46,7 @@
               <a class="nav-link fs-3" aria-current="page" href="/index.html">Home</a>
               <a class="nav-link fs-3" href="/experience.html">Experiences</a>
               <a class="nav-link fs-3" href="/competences.html">Competences</a>
-              <a class="nav-link fs-3">Disabled</a>
+              <a class="nav-link fs-3" href="/extras.html">Extras</a>
             </div>
           </div>
         </div>
@@ -62,12 +62,17 @@
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item border border-info">
                 <h2 class="accordion-header">
-                  <button style="display: block; text-align: center;" class="accordion-button bg-dark text-danger collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  <button class="accordion-button bg-dark text-danger collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                     <b>RABOT DUTILLEUL CONSTRUCTION</b>
                   </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse-show" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body bg-dark text-light"><strong>Placeholder content for this accordion</strong>, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                  <div class="accordion-body bg-dark text-light"><strong class="text-info">Décembre 1991 - Aujourd'hui -Croix(59)</strong></br>
+                  <p>--Dépanneur de grues à tour dans un premier temps puis, actuellement, en poste de gestion de suivi de matériel soumis aux contrôles périodiques réglementaires. Par ex: Installations provisoires de chantier, matériel topographique, extincteurs et harnais.</br>
+                  --Gestion du parc de matériel électroportatif de l'entreprise, achat, location, gestion des vols, inventaires...</br>
+                  --Gestion du parc de photocopieurs de chantier (environ 35 machines), plannification, suivi, demandes d'interventions...</br>
+                  --Je me suis occupé également pendant environ 4 ans (2008 à 2012) du parc de véhicules de service (et des cartes carburant) de l'entreprise ainsi que des locations courtes durées. </p>
+                  </div>
                 </div>
               </div>
               <div class="accordion-item border border-info">
@@ -77,7 +82,10 @@
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body bg-dark text-light"><strong>Placeholder content for this accordion</strong>, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                  <div class="accordion-body bg-dark text-light"><strong class="text-info">Octobre 1987 - Novembre 1991 - Sangatte</strong></br>
+                    <p>--Technicien de maintenance sur centrale de retraitement de boues d’excavation et machine de retournement des draisines de transport des matériaux excavés<br>
+                       --Technicien de maintenance sur les 3 tunneliers japonais qui ont réalisés les 3 tunnels reliant la gare de Coquelles au puit de Sangatte ainsi que sur la station de pompage du PK7</p> 
+                  </div>
                 </div>
               </div>
               <div class="accordion-item border border-info">
@@ -87,8 +95,9 @@
                   </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body bg-dark text-light"><h4 class="text-center">Avril 1987 - Novembre 1991</br>Lille et La Rochelle</h4></br>
-                  <p>Electromécanicien de poste au métro le Lille Ligne 1, Maintenance et dépannage installations électriques provisoires de chantier, Soudure, Oxycoupage. A partir de Juin 1991 départ sur La Rochelle comme électromécanicien de maintenance sur lanceur de voussoirs et centrales à béton.</p></div>
+                  <div class="accordion-body bg-dark text-light"><strong class="text-info">Février 1986 - Octobre 1987 -Lille et La Rochelle</strong></br>
+                  <p>--Electromécanicien de poste au métro le Lille Ligne 1, Maintenance et dépannage installations électriques provisoires de chantier, Soudure, Oxycoupage.</br>
+                     --A partir de Juin 1991 départ sur La Rochelle comme électromécanicien de maintenance sur lanceur de voussoirs et centrales à béton.</p></div>
                 </div>
               </div>
               <div class="accordion-item border border-info">
@@ -98,8 +107,8 @@
                   </button>
                 </h2>
                 <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body bg-dark text-light"><h4 class="text-center">Février 1985 - Janvier 1986</br>St Wendel (DE)</h4></br>
-                  <p>Electromécanicen sur tourelles de char AMX-30, Maintenance, réparations, essais de mise à feu, etanchéité à l'immertion, démontage et remontage des optiques de tir en vue de contrôles périodiques. Passage de mon permis poids-lourd.</p></div>
+                  <div class="accordion-body bg-dark text-light"><strong class="text-info">Février 1985 - Janvier 1986 -St Wendel (DE)</strong></br>
+                  <p>--Electromécanicen sur tourelles de char AMX-30, Maintenance, réparations, essais de mise à feu, etanchéité à l'immertion, démontage et remontage des optiques de tir en vue de contrôles périodiques. Passage de mon permis poids-lourd.</p></div>
                 </div>
               </div>
               <div class="accordion-item border border-info">
@@ -109,21 +118,15 @@
                   </button>
                 </h2>
                 <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body bg-dark text-light"><h4 class="text-center">Juillet 1983 - Janvier 1985</br>Arras</h4></br> <p>Mécanicien poids lourds, assistance au montage de centrales à béton</p></div>
+                  <div class="accordion-body bg-dark text-light"><strong class="text-info">Juillet 1983 - Janvier 1985 -Arras</strong></br> 
+                    <p>--Mécanicien poids lourds, assistance au montage de centrales à béton</p></div>
                 </div>
               </div>
             </div>
-            </div>
-        </div>
-      </div>
+          </div> 
+      </div> 
+    </div>
     </main>
-        <footer class="container-fluid bg-dark border border-info footer-row">
-            <div class="row row-cols-1 d-flex justify-content-center text-info">
-                <div class="text-center">
-                    <h6><b>Build by myself</b></h6>
-                </div>
-            </div>
-        </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html> 
