--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="navbar-nav">
               <a class="nav-link fs-3 active" aria-current="page"  href="#">Home</a>
               <a class="nav-link fs-3" href="/experience.html">Expériences</a>
-              <a class="nav-link fs-3" href="/competences.html">Competences</a>
-              <a class="nav-link fs-3" href="#">Loisirs</a>
+              <a class="nav-link fs-3" href="/competences.html">Compétences</a>
+              <a class="nav-link fs-3" href="/extras.html">Extras</a>
             </div>
           </div>
         </div>
@@ -84,8 +84,7 @@
             <p class="fs-4">
               Curieux, passionné, j'aime apprendre et relever de nouveaux défis, tant personnels que professionnels</br>
               Animé par la rigueur et la réflexion, je suis allé au bout de mes projets et de ceux que l’on m’a confié en créant des indicateurs de contrôle et de pilotage.
-              Le savoir être et une bonne élocution me caractérisent, je suis à l’écoute de mes interlocuteurs, et sait faire preuve d’une grande capacité d’intégration à une nouvelle équipe lorsque la situation le nécessite. Le pragmatisme, la bonne humeur et la maîtrise de soi sont la clé pour moi d’une bonne gestion en toutes circonstances
-
+              Le savoir être et une bonne élocution me caractérisent, je suis à l’écoute de mes interlocuteurs, et sais faire preuve d’une grande capacité d’intégration à une nouvelle équipe lorsque la situation le nécessite. Le pragmatisme, la bonne humeur et la maîtrise de soi sont la clé pour moi d’une bonne gestion en toutes circonstances
             </br>
               J'aime ainsi découvrir de nouveaux métiers et une nouvelle approche de travail, tout en faisant partager le fruit de mon expérience dans les domaines les plus variés.
             </p>
@@ -93,13 +92,6 @@
         </div>
       </div>
     </main>
-    <footer class="container-fluid bg-dark border border-info footer-row">
-      <div class="row row-cols-1 d-flex justify-content-center text-info ">
-          <div class="text-center">
-              <h6><b>Build by myself</b></h6>
-          </div>
-      </div>
-  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
