build the Extras pages and finished the Formations page. start contact page

--- a/experience.html
+++ b/experience.html
@@ -46,7 +46,9 @@
               <a class="nav-link fs-3" aria-current="page" href="/index.html">Home</a>
               <a class="nav-link fs-3" href="/experience.html">Experiences</a>
               <a class="nav-link fs-3" href="/competences.html">Competences</a>
+              <a class="nav-link fs-3" href="/formations.html">Formations</a>
               <a class="nav-link fs-3" href="/extras.html">Extras</a>
+              <a class="nav-link fs-3" href="/contact.html">Contact</a>
             </div>
           </div>
         </div>
@@ -66,7 +68,7 @@
                     <b>RABOT DUTILLEUL CONSTRUCTION</b>
                   </button>
                 </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse-show" data-bs-parent="#accordionFlushExample">
+                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
                   <div class="accordion-body bg-dark text-light"><strong class="text-info">Décembre 1991 - Aujourd'hui -Croix(59)</strong></br>
                   <p>--Dépanneur de grues à tour dans un premier temps puis, actuellement, en poste de gestion de suivi de matériel soumis aux contrôles périodiques réglementaires. Par ex: Installations provisoires de chantier, matériel topographique, extincteurs et harnais.</br>
                   --Gestion du parc de matériel électroportatif de l'entreprise, achat, location, gestion des vols, inventaires...</br>
