--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
               <a class="nav-link fs-3 active" aria-current="page"  href="#">Home</a>
               <a class="nav-link fs-3" href="/experience.html">Expériences</a>
               <a class="nav-link fs-3" href="/competences.html">Compétences</a>
+              <a class="nav-link fs-3" href="/formations.html">Formations</a>
               <a class="nav-link fs-3" href="/extras.html">Extras</a>
+              <a class="nav-link fs-3" href="/contact.html">Contact</a>
             </div>
           </div>
         </div>
@@ -74,20 +76,22 @@
         </div>
       </div>
       <div>
-        <div class="row align-items-center justify-content-center" id="about">
-          <div class="col col-4"> 
-            <img class="img-thumbnail" src="/img/ludo.jpg" width="350px" style="max-width: 100%;"/>
-          </div>
-          <div class="col col-4">
-            <h3 class="text-center">Qui suis-je ?</h3>
-            <p class="fs-4">Bonjour, je m'appele  </br><span class="text-danger fs-2" >Ludovic SCHIARATURA</span></p>
-            <p class="fs-4">
-              Curieux, passionné, j'aime apprendre et relever de nouveaux défis, tant personnels que professionnels</br>
-              Animé par la rigueur et la réflexion, je suis allé au bout de mes projets et de ceux que l’on m’a confié en créant des indicateurs de contrôle et de pilotage.
-              Le savoir être et une bonne élocution me caractérisent, je suis à l’écoute de mes interlocuteurs, et sais faire preuve d’une grande capacité d’intégration à une nouvelle équipe lorsque la situation le nécessite. Le pragmatisme, la bonne humeur et la maîtrise de soi sont la clé pour moi d’une bonne gestion en toutes circonstances
-            </br>
-              J'aime ainsi découvrir de nouveaux métiers et une nouvelle approche de travail, tout en faisant partager le fruit de mon expérience dans les domaines les plus variés.
-            </p>
+        <div class="container">
+          <div class="row row-cols-1 row-cols-md-2 align-items-center pt-5 pb-5" id="about">
+            <div> 
+              <img class="img-thumbnail" src="/img/ludo.jpg" width="350px" style="max-width: 100%;"/>
+            </div>
+            <div class="col pt-2 pb-2">
+              <h3 class="text-center">Qui suis-je ?</h3>
+              <p class="fs-4">Bonjour, je m'appele  </br><span class="text-danger fs-2" >Ludovic SCHIARATURA</span></p>
+              <p class="fs-4">
+                Curieux, passionné, j'aime apprendre et relever de nouveaux défis, tant personnels que professionnels</br>
+                Animé par la rigueur et la réflexion, je suis allé au bout de mes projets et de ceux que l’on m’a confié en créant des indicateurs de contrôle et de pilotage.
+                Le savoir être et une bonne élocution me caractérisent, je suis à l’écoute de mes interlocuteurs, et sais faire preuve d’une grande capacité d’intégration à une nouvelle équipe lorsque la situation le nécessite. Le pragmatisme, la bonne humeur et la maîtrise de soi sont la clé pour moi d’une bonne gestion en toutes circonstances
+              </br>
+                J'aime ainsi découvrir de nouveaux métiers et une nouvelle approche de travail, tout en faisant partager le fruit de mon expérience dans les domaines les plus variés.
+              </p>
+            </div>
           </div>
         </div>
       </div>
