--- a/formations.html
+++ b/formations.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;600&display=swap" rel="stylesheet">
-    <link href="styleCV.css" rel="stylesheet" />
+    <link href="styleCV2.css" rel="stylesheet" />
     <title>CV SCHIARATURA Ludovic</title>
   </head>
   <body class="bg-dark text-light">
@@ -28,7 +28,7 @@
               height="24"
               class="d-inline-block align-text-top"
             />
-            X_CYL
+            <b>L.S.</b>
           </a>
           <button
             class="navbar-toggler"
@@ -56,23 +56,27 @@
     </header>
     <main class="container-fluid">
       <div class="row row-cols-1" id="firstRowHomePage">
-        <div
-          class="d-flex justify-content-center" id="text-presentation">
+        <div class="d-flex justify-content-center" id="text-presentation">
           <div class="cols col-10 text-experience">
-            <h3 class="experiences fs-1 text-center"><u>Mes competences</u></h3>
+            <h3 class="experiences fs-1 text-center"><u>Mes formations</u></h3>
             <div class="container">
                 <div class="d-flex justify-content-center">
-                    <div class="row">
-                        <div class=" col p-2 ">
+                    <div class="row row-cols-1">
+                        <div class=" col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/welding.png" class="card-img-top size-img-card" alt="microsoft office logo">
+                                <img src="/img/html-5.png" class="card-img-top size-img-card" alt="logo du language html-5">
+                                <img src="/img/css-3.png" class="card-img-top size-img-card" alt="logo du language css">
+                                <img src="/img/js.png" class="card-img-top size-img-card" alt="logo du language java script">
+                                <img src="/img/reactJS.png" class="card-img-top size-img-card" alt="logo bibliothèque front-end reactJS">
+                                <img src="/img/nodejs.png" class="card-img-top size-img-card" alt="logo bibliothèque back-end nodeJS">
+                                <img src="/img/bases-de-donnees.png" class="card-img-top size-img-card" alt="logo bases de données">
                                 <div class="card-body text-center">
-                                  <p class="card-text">Soudure à l'arc, apprentissage sur site avec des anciens "sachants" qui ont étés mes tuteurs.</p>
+                                  <p class="card-text"><strong><u class="text-info">Fevrier 2022 à aujourd'hui</u></strong> Formation en ligne via STUDI : Développeur web full stack, essentielement au language Javasript (bibliothèque ReactJS, nodeJS) et base de données SQL.</p>
                                 </div>
                                 <div class="card-footer text-body-light mt-4">
                                     <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-half text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
                                     <i class="bi bi-star text-info"></i>
                                     <i class="bi bi-star text-info"></i>
                                 </div>
@@ -80,113 +84,82 @@
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/automatisation.png" class="card-img-top size-img-card" alt="...">
+                                <img src="/img/mcs.png" class="card-img-top size-img-card" alt="logo entreprise MCS rm de gestion de matériel">
                                 <div class="card-body text-center">
-                                  <p class="card-text">Automatismes, mise en place et parametrage d'automates d' assistance à la conduite de grues à tour, de centrales à béton</p>
+                                  <p class="card-text"><strong><u class="text-info">Juin et Septembre 2018</u></strong> Formation au logiciel de gestion de matériel (location, ventes, facturation, GMAO,...) MCSrm, référent entreprise, mise en forme de rapports, de documents.</p>
                                 </div>
                                 <div class="card-footer text-body-light">
                                     <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star text-info"></i>
+                                    <i class="bi bi-star-half text-info"></i>
                                     <i class="bi bi-star text-info"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="col p-2 ">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/sauveteur.gif" class="card-img-top size-img-card" alt="...">
+                                <img src="/img/comptoir-des-langues.png" class="card-img-top size-img-card" alt="logo du comptoir des langues">
                                 <div class="card-body text-center">
-                                  <p class="card-text">Sauveteur secouriste du travail depuis 20 ans, recyclages tous les 2 ans, formé à l'utilisation du défibrilateur</p>
+                                  <p class="card-text"><strong><u class="text-info">2017 en 6 mois</u></strong> Formation à l'anglais avec "le comptoir des langues", formation en e-learning avec 40 heures de cours dispensé par un professeur via skype</p>
                                 </div>
                                 <div class="card-footer text-body-light mt-4">
-                                    <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-half text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
+                                    <i class="bi bi-star text-info"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/GIMP-logo.png" class="card-img-top size-img-card" alt="...">
+                                <img src="/img/Bac-pro.webp" class="card-img-top size-img-card" alt="logo du bac pro">
                                 <div class="card-body text-center">
-                                  <p class="card-text">Retouche photo, équivalent libre de Photoshop, bonne connaissance du soft pour usage courant et plus pointu.</p>
+                                  <p class="card-text"><strong><u class="text-info">2009 en 1 an</u></strong> Obtention du bac pro maintenance industrielle via une VAE. Support utilisé: Les suivis de maintenances préventives et curatives de grues à tour</p>
                                 </div>
                                 <div class="card-footer text-body-light mt-4">
                                     <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star text-info"></i>
-                                    <i class="bi bi-star text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/Libre-Office.webp" class="card-img-top size-img-card" alt="...">
+                                <img src="/img/logo-smie.png" class="card-img-top size-img-card" alt="...">
                                 <div class="card-body text-center">
-                                  <p class="card-text">Utilisation régulière en privé du pack open source "libre office", bonne alternative au pack MS.</p>
-                                </div>
-                                <div class="card-footer text-body-light mt-4">
-                                    <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star text-info"></i>
-                                    <i class="bi bi-star text-info"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col p-2">
-                            <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/mcs.png" class="card-img-top size-img-card" alt="...">
-                                <div class="card-body text-center">
-                                  <p class="card-text">Logiciel pro de gestion de location/vente de matériel, facturation, rapports d'activité, etc..., référent logiciel dans l'entreprise</p>
+                                  <p class="card-text"><strong><u class="text-info">Décembre 1995 1 semaine</u></strong> Une semaine de formation au sein de l'entreprise SMIE qui fabrique et commercialise des automates d'aides à la conduite de grues à tour</p>
                                 </div>
                                 <div class="card-footer text-body-light">
                                     <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star text-info"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col p-2">
-                            <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/msOffice.png" class="card-img-top size-img-card" alt="...">
-                                <div class="card-body text-center">
-                                  <p class="card-text">Bonnes connaissances du pack office Microsoft, excel, word, teams, etc... en utilisation profeéssionnelle.</p>
-                                </div>
-                                <div class="card-footer text-body-light mt-4">
-                                    <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-half text-info"></i>
-                                    <i class="bi bi-star text-info"></i>
                                 </div>
                             </div>
-                        </div>
+                        </div>  
                         <div class="col p-2">
                             <div class="card bg-dark text-light border border-info pt-3 h-100" style="display: block; text-align: center; min-width: 18rem; height: auto;">
-                                <img src="/img/ubuntu-studio-logo.png" class="card-img-top size-img-card" alt="...">
+                                <img src="/img/logo_educationnational.webp" class="card-img-top size-img-card" alt="logo education nationale">
                                 <div class="card-body text-center">
-                                  <p class="card-text">Ubuntu studio, logiciel de montage musical, enregistrements, création, arrangements, filtrage</p>
+                                  <p class="card-text"><strong><u class="text-info">1982 et 1983</u></strong> Obtention du CAP et BEP électromécanique au lycée Allede de Bethune</p>
                                 </div>
                                 <div class="card-footer text-body-light mt-4">
                                     <i class="bi bi-star-fill text-info"></i>
                                     <i class="bi bi-star-fill text-info"></i>
-                                    <i class="bi bi-star text-info"></i>
-                                    <i class="bi bi-star text-info"></i>
-                                    <i class="bi bi-star text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
+                                    <i class="bi bi-star-fill text-info"></i>
                                 </div>
                             </div>
                         </div>
                     </div> 
                 </div> 
-              </div>
-          </div> 
+            </div>
         </div> 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
