cleaning code and img folder

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             en détail ci-dessous...
           </p>
           <div class="btn-container">
-            <a class="btn btn-outline-info" href="/img/cv Ludo 28 05 20_2.pdf" target="_blank">Télécharger mon CV</a>
+            <a class="btn btn-outline-info" href="/img/CVLudo -du-03-02-23.pdf" target="_blank">Télécharger mon CV</a>
           </div>
           <div class="" id="mouseBtn">
             <a href="#about"><i class="bi bi-mouse-fill"></i></a>
