--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
               <a class="nav-link fs-3" href="/competences.html">Compétences</a>
               <a class="nav-link fs-3" href="/formations.html">Formations</a>
               <a class="nav-link fs-3" href="/extras.html">Extras</a>
-              <a class="nav-link fs-3" href="/contact.html">Contact</a>
+              <a class="nav-link fs-3 active" href="/contact.html">Contact</a>
             </div>
           </div>
         </div>
