--- a/experience.html
+++ b/experience.html
@@ -44,7 +44,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link fs-3" aria-current="page" href="/index.html">Home</a>
-              <a class="nav-link fs-3" href="/experience.html">Experiences</a>
+              <a class="nav-link fs-3 active" href="/experience.html">Experiences</a>
               <a class="nav-link fs-3" href="/competences.html">Competences</a>
               <a class="nav-link fs-3" href="/formations.html">Formations</a>
               <a class="nav-link fs-3" href="/extras.html">Extras</a>
