--- a/competences.html
+++ b/competences.html
@@ -45,7 +45,7 @@
             <div class="navbar-nav">
               <a class="nav-link fs-3" aria-current="page" href="/index.html">Home</a>
               <a class="nav-link fs-3" href="/experience.html">Expériences</a>
-              <a class="nav-link fs-3" href="/competences.html">Compétences</a>
+              <a class="nav-link fs-3 active" href="/competences.html">Compétences</a>
               <a class="nav-link fs-3" href="/formations.html">Formations</a>
               <a class="nav-link fs-3" href="/extras.html">Extras</a>
               <a class="nav-link fs-3" href="/contact.html">Contact</a>
