--- a/extras.html
+++ b/extras.html
@@ -47,7 +47,7 @@
               <a class="nav-link fs-3" href="/experience.html">Expériences</a>
               <a class="nav-link fs-3" href="/competences.html">Compétences</a>
               <a class="nav-link fs-3" href="/formations.html">Formations</a>
-              <a class="nav-link fs-3" href="/extras.html">Extras</a>
+              <a class="nav-link fs-3 active" href="/extras.html">Extras</a>
               <a class="nav-link fs-3" href="/contact.html">Contact</a>
             </div>
           </div>
@@ -58,7 +58,7 @@
       <div class="row row-cols-1" id="firstRowHomePage">
         <div class="d-flex justify-content-center" id="text-presentation">
             <div class="text-experience">
-                <h3 class="experiences fs-1 text-center"><u>Mes extras</u></h3>
+                <h3 class="experiences fs-1 text-center"><u>Mes extras, mes activités extra pro</u></h3>
                 <div class="container text-center">
                     <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-4 justify-content-center">
                       <div class="col text-info fs-4">
